// ============================================================================
// /manufacturing/outsourced-manufacturing-service (版本 2.0)
// 描述: 管理外协加工流程，包括向供应商发料和接收加工后的成品。
//       这通常涉及特殊的采购订单项目类别和库存管理移动类型。
// ============================================================================

syntax = "proto3";

package mf.om.v1;

option go_package = "github.com/enterprise/erp/protos/mf/om;om";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ============================================================================
// 服务定义: OutsourcedManufacturingService
// ============================================================================

service OutsourcedManufacturingService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "管理外协加工流程，包括向供应商发料和接收加工后的成品。"
  };
  // 创建外协采购订单 (New)
  rpc CreateSubcontractingOrder(CreateSubcontractingOrderRequest) returns (SubcontractingOrderResponse) {

    option (google.api.http) = {

      post: "/api/v1/manufacturing/subcontracting-order"

      body: "*"

    };

  }

  // 获取外协采购订单详情
  rpc GetSubcontractingOrder(GetSubcontractingOrderRequest) returns (SubcontractingOrderDetail) {


    option (google.api.http) = {


      get: "/api/v1/manufacturing/subcontracting-order"


    };


  }

  // 向供应商过账组件发料
  rpc PostComponentsToSupplier(PostComponentsRequest) returns (PostComponentsResponse) {


    option (google.api.http) = {


      post: "/api/v1/manufacturing/components-to-supplier/post"


      body: "*"


    };


  }

  // 接收外协加工成品
  rpc ReceiveFinishedGoodsFromSupplier(ReceiveFinishedGoodsRequest) returns (ReceiveFinishedGoodsResponse) {


    option (google.api.http) = {


      post: "/api/v1/manufacturing/receive-finished-goods-from-supplier"


      body: "*"


    };


  }
}

// ============================================================================
// 数据结构: Subcontracting (外协)
// ============================================================================

// 外协采购订单详情
message SubcontractingOrderDetail {
  // 采购订单号
  string purchase_order_number = 1;
  // 供应商
  string supplier = 2;
  // 外协成品项目列表
  repeated SubcontractingItem finished_goods_items = 3;
}

// 外协项目 (成品)
message SubcontractingItem {
  // 采购订单项目号
  int32 item_number = 1;
  // 成品物料编号
  string finished_good_material = 2;
  // 订单数量
  common.v1.QuantityValue order_quantity = 3;
  // 已收货数量
  common.v1.QuantityValue received_quantity = 4;
  // 单位
  string unit = 5;
  // 需要提供的组件列表
  repeated SubcontractingComponent components = 6;
}

// 外协组件
message SubcontractingComponent {
  // 组件物料编号
  string component_material = 1;
  // 需求数量
  common.v1.QuantityValue required_quantity = 2;
  // 已发货数量
  common.v1.QuantityValue issued_quantity = 3;
  // 单位
  string unit = 4;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 创建外协订单请求
message CreateSubcontractingOrderRequest {
  string supplier = 1;
  string company_code = 2;
  string purchasing_org = 3;
  string purchasing_group = 4;
  repeated CreateSubcontractingItem items = 5;
  common.v1.RequestContext context = 99;
}

message CreateSubcontractingItem {
  string material = 1;
  common.v1.QuantityValue quantity = 2;
  string plant = 3;
  google.protobuf.Timestamp delivery_date = 4;
  // 组件列表 (可选，如果BOM未展开)
  repeated SubcontractingComponent components = 5;
}

// 外协订单响应
message SubcontractingOrderResponse {
  bool success = 1;
  string purchase_order_number = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 获取外协订单请求
message GetSubcontractingOrderRequest {
  // 采购订单号
  string purchase_order_number = 1;
  common.v1.RequestContext context = 99;
}

// 发送组件请求
message PostComponentsRequest {
  // 采购订单号
  string purchase_order_number = 1;
  // 过账日期
  google.protobuf.Timestamp posting_date = 2;
  // 要发送的组件列表
  repeated ComponentIssuance items = 3;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 待发货的组件
message ComponentIssuance {
  // 采购订单项目号
  int32 purchase_order_item = 1;
  // 组件物料编号
  string component_material = 2;
  // 发货数量
  common.v1.QuantityValue quantity_to_issue = 3;
  // 单位
  string unit = 4;
  // 批次
  string batch = 5;
}

// 发送组件响应
message PostComponentsResponse {
  // 生成的物料凭证号
  string material_document_number = 1;
  // 从核心ERP返回的消息列表
  repeated common.v1.ApiMessage messages = 2;
}

// 接收成品请求
message ReceiveFinishedGoodsRequest {
  // 采购订单号
  string purchase_order_number = 1;
  // 过账日期
  google.protobuf.Timestamp posting_date = 2;
  // 要接收的成品列表
  repeated FinishedGoodReceipt items = 3;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 待接收的成品
message FinishedGoodReceipt {
  // 采购订单项目号
  int32 purchase_order_item = 1;
  // 接收数量
  common.v1.QuantityValue quantity_to_receive = 2;
  // 单位
  string unit = 3;
  // 批次 (接收到的成品批次)
  string batch = 4;
}

// 接收成品响应
message ReceiveFinishedGoodsResponse {
  // 生成的物料凭证号
  string material_document_number = 1;
  // 从核心ERP返回的消息列表
  repeated common.v1.ApiMessage messages = 2;
}
